tests/invalid/numbers/no_space.rs
/*
fail: 1
*/

main(): int {
    return0;
}